# core/src/db/model/server/jobs.rs
@@ -1,11 +1,12 @@
 use diesel::prelude::*;
 use serde::{Deserialize, Serialize};
+use utoipa::ToSchema;
 
 #[allow(unused_imports)]
 use crate::db::model::server as model;
 use crate::db::schema::server as schema;
 
-#[derive(Debug, Queryable, Selectable, Serialize, Deserialize, Clone)]
+#[derive(Debug, Queryable, Selectable, Serialize, Deserialize, Clone, ToSchema)]
 #[diesel(table_name = schema::jobs)]
 pub struct Job {
   pub id: String,
@@ -17,7 +18,7 @@ pub struct Job {
   pub updated_at: chrono::NaiveDateTime,
 }
 
-#[derive(Queryable, Insertable, Serialize, Deserialize)]
+#[derive(Queryable, Insertable, Serialize, Deserialize, ToSchema)]
 #[diesel(table_name = schema::jobs)]
 pub struct NewJob {
   pub id: String,
@@ -27,13 +28,12 @@ pub struct NewJob {
   pub job_shell: String,
 }
 
-#[allow(dead_code)]
-#[derive(Deserialize, AsChangeset)]
+#[derive(Deserialize, AsChangeset, ToSchema)]
 #[diesel(table_name = schema::jobs)]
 pub struct UpdateJob {
-  id: String,
-  job_name: String,
-  job_type: String,
-  job_status: String,
-  job_shell: String,
+  pub id: String,
+  pub job_name: String,
+  pub job_type: String,
+  pub job_status: String,
+  pub job_shell: String,
 }
